Point out to flickering issue in README and add link to GitHub

--- a/LightBook/data/index.css
+++ b/LightBook/data/index.css
@@ -10,6 +10,7 @@ a, a.hover { font-family:Arial, sans-serif; display:block; background:#555; colo
 .btnLeftRight { margin:auto; font-family:Arial, sans-serif; background:#555; color:white; text-decoration:none; font-size:1em; text-align:center; border:none; border-spacing:0px; }
 span { font-family:Arial, sans-serif; color:white; text-decoration:none; font-size:1em; }
 #clearButton, #clearButton.hover { margin-top:10px; margin-left:auto; margin-right:auto; font-family:Arial, sans-serif; display:block; width:406px; background:#666; color:white; text-decoration:none; font-size:2em; text-align:center; }
+#githubButton, #githubButton.hover { margin-top:10px; margin-left:auto; margin-right:auto; font-family:Arial, sans-serif; display:block; width:406px; background:#666; color:white; text-decoration:none; font-size:1em; text-align:center; }
 .tdIcon { width:36px; height:36px; }
 .iconTd { width:36px; height:36px; padding:4px; background:#666; border:2px solid #000000; border-radius:6px; border-collapse:collapse; cursor:pointer; }
 .iconTd:hover { background:#888; border:2px solid #aaa; }
